--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-theme-default.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-theme-default.css
@@ -1430,6 +1430,7 @@ body.dui {
     --dui-datattable-cell-line-height: var(--dui-spc-2);
     --dui-datattable-navbar-padding: 0;
     --dui-datattable-navbar-margin: var(--dui-spc-2) 0 var(--dui-spc-2) 0;
+    --dui-datattable-border: 1px solid var(--dui-datatable-border-color);
 
     /* ========================= Generic ======================= */
     --dui-close-char-top:-1px;
